--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "org",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/josejhc/HC.git",
+  "homepage": "https://josejhc.github.io/HC/build",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
