--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "org",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://josejhc.github.io/HC/build",
+  "homepage": "http:/josejhc.github.io/HC",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.8",
+    "gh-pages": "^6.1.1",
     "hex-to-rgba": "^2.0.1",
     "next-link": "^2.0.0",
     "react": "^18.3.1",
@@ -21,6 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
