--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "org",
+  "name": "HCompany",
   "version": "0.1.0",
   "private": true,
   "_comment":"homepage: https://josejhc.github.io/HC",
